// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-input-label should render 1`] = `
<ic-input-label for="test-input-id" label="Test label">
  <!---->
  <ic-typography variant="label">
    <label htmlfor="test-input-id">
      Test label
    </label>
  </ic-typography>
</ic-input-label>
`;

exports[`ic-input-label should render disabled variant 1`] = `
<ic-input-label class="ic-input-label-disabled" disabled="true" for="test-input-id" label="Test label" required="true">
  <!---->
  <ic-typography variant="label">
    <label htmlfor="test-input-id">
      Test label *
    </label>
  </ic-typography>
</ic-input-label>
`;

exports[`ic-input-label should render error variant 1`] = `
<ic-input-label for="test-input-id" label="Test label" status="error">
  <!---->
  <ic-typography class="error-label" variant="label">
    <label htmlfor="test-input-id">
      Test label
    </label>
  </ic-typography>
</ic-input-label>
`;

exports[`ic-input-label should render readonly variant 1`] = `
<ic-input-label class="ic-input-label-readonly" for="test-input-id" label="Test label" readonly="true" required="true">
  <!---->
  <ic-typography class="readonly-label" variant="label">
    Test label *
  </ic-typography>
</ic-input-label>
`;

exports[`ic-input-label should render required variant 1`] = `
<ic-input-label for="test-input-id" label="Test label" required="true">
  <!---->
  <ic-typography variant="label">
    <label htmlfor="test-input-id">
      Test label *
    </label>
  </ic-typography>
</ic-input-label>
`;

exports[`ic-input-label should render with helpertext 1`] = `
<ic-input-label class="with-helper" for="test-input-id" helper-text="Some helper text" label="Test label" required="true">
  <!---->
  <ic-typography variant="label">
    <label htmlfor="test-input-id">
      Test label *
    </label>
  </ic-typography>
  <ic-typography class="helpertext helpertext-normal" variant="caption">
    <span id="test-input-id-helper-text">
      Some helper text
    </span>
  </ic-typography>
</ic-input-label>
`;

exports[`ic-input-label should render with label text not wrapped in label tag 1`] = `
<ic-input-label class="with-helper" helper-text="Some helper text" label="Test label" required="true" use-label-tag="false">
  <!---->
  <ic-typography variant="label">
    Test label *
  </ic-typography>
  <ic-typography class="helpertext helpertext-normal" variant="caption">
    <span>
      Some helper text
    </span>
  </ic-typography>
</ic-input-label>
`;
